package ru.home.itinfo.model;

public enum Rate {
    WORST, BAD, INDIFFERENT, GOOD, BEST, UNKNOWN
}
