package ru.home.itinfo.model;

public enum State {
    STUDIED, LEFT, PLANNED, READING
}
