@startuml
class Info {
    - Long id
    - String title
    - String isbn
    - Publisher publisher
    - Rate rate
    - State state
    - Set<Tag> tags
    - int year
    - Descript descript
    - Content content
    - InfoFile file
}
class Book {
    - int pages
    - Set<Author> authors
}
class Author {
    - Long id
    - String name
    - String normalizedName
    - Set<Book> books
}
class InfoFile {
    - Long id
    - String filename
    - Long size
}
class Descript {
    - Long id
    - byte[] text
}
class Content {
    - Long id
    - byte[] text
}
class Publisher {
    - Long id
    - String name
    - Set<Book> books
}
class Tag {
    - Long id
    - String tag
    - Set<Book> books
}
enum Rate {
    WORST
    BAD
    INDIFFERENT
    GOOD
    BEST
    UNKNOWN
}
enum State {
    STUDIED
    LEFT
    PLANNED
    READING
}
class Course {
    - Duration duration
}

Book <|-- Info
Course <|-- Info

Author *-- Book
InfoFile *-- Book
Descript *-- Book
Content *-- Book
Publisher *-- Book
Tag *-- Book
Rate *-- Book
State *-- Book

InfoFile *-- Curs
Descript *-- Curs
Publisher *-- Curs
Tag *-- Curs
Rate *-- Curs
State *-- Curs
@enduml